--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,28 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.github.javamentorship</groupId>
+
+    <groupId>com.github.javamentorship</groupId>
     <artifactId>mentorship</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <packaging>war</packaging>
+
     <name>Learning Maven GitHUB JSP Spring IOC</name>
-    <description>PowerMoc core functionaly</description>
-    <url>https://github.com/Javajuns</url>
+    <description>PowerMoc core functionaly.</description>
+    <url>https://github.com/OlegLion/mentorship</url>
+
     <dependencies>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>SERVLET API</artifactId>
-            <version>LATEST</version>
+            <artifactId>jstl</artifactId>
+            <version>1.1.2</version>
         </dependency>
     </dependencies>
     <build>
