--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>com.github.javamentorship</groupId>
     <artifactId>mentorship</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <packaging>war</packaging>
 
     <name>Learning Maven GitHUB JSP Spring IOC</name>
@@ -42,28 +41,27 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>2. 0</version>
+            <version>2.0</version>
         </dependency>
     </dependencies>
 
     <build>
          <plugins>
-        <plugin>
+         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.3.2</version>
             <configuration>
+
                 <source>$(jdk)</source>
-                <targer>$(jdk)</targer>
+                <target>$(jdk)</target>
                 <compilerVersion>$(jdk)</compilerVersion>
                 <optimize>true</optimize>
-                <werbose></werbose>
+                <verbose>true</verbose>
                 <debug>true</debug>
                 <fork>true</fork>
             </configuration>
-            <dependencies>
-            </dependencies>
-        </plugin>
-    </plugins>
+            </plugin>
+        </plugins>
     </build>
 </project>
