--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.javamentorship</groupId>
+    <groupId>com.github.OlegLion</groupId>
     <artifactId>mentorship</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -29,7 +29,6 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.1.2</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -38,6 +37,12 @@
             <version>2.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -45,21 +50,27 @@
         <outputDirectory>target/classes</outputDirectory>
         <finalName>${project.artifactId}-${project.version}</finalName>
         <testOutputDirectory>target/test-classes</testOutputDirectory>
+        <sourceDirectory>/src</sourceDirectory>
+        <scriptSourceDirectory>/src</scriptSourceDirectory>
+        <testSourceDirectory>/src</testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>test</directory>
+            </testResource>
+        </testResources>
         <plugins>
-            <plugin>
+                <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                    <source>${jdk}</source>
-                    <target>${jdk}</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <inherited>true</inherited>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <updateReleaseInfo>true</updateReleaseInfo>
+                    <source>$(jdk)</source>
+                    <target>$(jdk)</target>
+                    <compilerVersion>$(jdk)</compilerVersion>
+                    <optimize>true</optimize>
+                    <verbose>true</verbose>
+                    <debug>true</debug>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
@@ -67,6 +78,33 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
             </plugin>
-        </plugins>
+
+            <plugin>
+            <groupId>org.dbmaintain</groupId>
+            <artifactId>dbmaintain-maven-plugin</artifactId>
+            <version>2.4</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.hsqldb</groupId>
+                        <artifactId>hsqldb</artifactId>
+                        <version>2.3.2</version>
+                    </dependency>
+                 </dependencies>
+            <configuration>
+                <databases>
+                    <database>
+                        <driverClassName>org.hsqldb.jdbcDriver</driverClassName>
+                        <url>jdbc:hsqldb:file:target/devDb/devDb;ifexists=false;shutdown=true</url>
+                        <dialect>hsqldb</dialect>
+                        <userName>sa</userName>
+                       <!-- <password></password>-->
+                        <schemaNames>TEST</schemaNames>
+                    </database>
+                </databases>
+                <scriptLocations>src/main/sql</scriptLocations>
+                <autoCreateDbMaintainScriptsTable>true</autoCreateDbMaintainScriptsTable>
+            </configuration>
+            </plugin>
+       </plugins>
     </build>
 </project>
